# PennyParse

./: .env.example  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
docs/: agent-loop.md  architecture.md  chat-client.md  cli-tool.md  config.md  developer-guide.md  extraparser.md  init-docs.md  parser-run.md  testing.md  tool-mechanism.md  user-guide.md  user-guide.zh-hans.md  user-toolbox.md
skills/pennyparse/: SKILL.md
skills/pennyparse/references/: agent-compatibility.md  toolbox-and-config.md
src/pennyparse/: __init__.py  _client.py  cli.py  config.py  logger.py  pennyparse.prompt.toml  pennyparse.settings.default.ini  pennyparse.settings.default.toml  pennyparse.toolbox_builtin.toml  pennyparse.toolbox_builtin.txt  pennyparse.toolbox_user.example.toml  pennyparse.toolbox_user.example.txt  utils.py  utils_aigc.py  web.py
src/pennyparse/agent/: init_tools.py  parser.py  reviewer.py
src/pennyparse/cmd/: __init__.py  init.py  init_docs.py  init_tools.py  run.py  tool.py
tests/: e2e.sh  test_dynamic_validation.py
