[project]
name = "pennyparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[project.scripts]
pennyparse = "pennyparse:main"

[project.optional-dependencies]
pdf = [
    "pymupdf>=1.27.2.2",
]
docx = [
    "pypandoc-binary>=1.17",
]
full = [
    "pennyparse[pdf,docx]",
]

[build-system]
requires = ["uv_build>=0.11.5,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.9",
    "ty>=0.0.29",
]
